# calcumaker-web

./: .gitignore  Cargo.toml  PLAN.md  README.md  rust-toolchain.toml
.github/workflows/: engine-watch.yml  release-bundle.yml
crates/calcumaker-wasm/: Cargo.toml  build.rs
crates/calcumaker-wasm/src/: lib.rs
scripts/: build-dist.sh  build-wasm.sh  deploy-release.sh  package-dist.sh  smoke.mjs
web/: .stylelintrc.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/scripts/: screenshots.mjs  verify-browser.mjs  verify-font.mjs
web/src/: build-info.d.ts  main.ts  styles.css
web/src/display/: font5x7.ts  matrix.ts  oled.ts  seg7.ts
web/src/keypad/: keypad.ts
web/src/wasm/: calcumaker.ts
